@@ -1,3 +1,15 @@
+2011-07-04 18:40  paddockd
+
+	* [r266] ChangeLog, src/slimproto/slimproto.c,
+	  src/slimproto/slimproto.h, src/squeezeslave/squeezeslave.c,
+	  src/squeezeslave/squeezeslave.h: Added slimproto_button and
+	  slimproto_knob functions to libslimprotocol from rpress
+	  squeezeslave empeg patch.
+	  Added compiler error message for windows builds when RENICE
+	  defined.
+	  Increased FIRMWARE_VERSION to 6.
+	  Increased version to 266.
+
 2011-07-04 14:29  paddockd
 
 	* [r265] ChangeLog, src/slimaudio/slimaudio.h,
